new changelog stanza
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@294 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.31-5) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 22 Dec 2007 14:58:57 +0100
+
 findutils (4.2.31-4) unstable; urgency=low
 
   * Allow setting IONICE_CLASS and IONICE_PRIORITY in
