--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-findutils (4.2.31-5) UNRELEASED; urgency=low
+findutils (4.2.32-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream version.
+    - Fixes memory-corruption caused by off-by-one error in lib/listfile.c.
+      Closes: #462224
+    - Correct docs for %b printf specifier in info manual, too.
+      (Closes: #400936)
+   * License now GPLv3+, update debian/copyright.
 
- -- Andreas Metzler <ametzler@debian.org>  Sat, 22 Dec 2007 14:58:57 +0100
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 27 Jan 2008 10:18:07 +0100
 
 findutils (4.2.31-4) unstable; urgency=low
 
