--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ findutils (4.2.32-1) unstable; urgency=low
      versions with included locate: If updatedb.conf is user modified and
      /etc/updatedb.findutils.cron.local does not yet exist, generate the
      latter from the former. Closes: #459570
+   * Point watch file to ftp.gnu.org instead of alpha.
 
  -- Andreas Metzler <ametzler@debian.org>  Sun, 27 Jan 2008 10:18:07 +0100
 
