--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.32-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 27 Jan 2008 13:09:38 +0100
+
 findutils (4.2.32-1) unstable; urgency=low
 
   * New upstream version.
