--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 findutils (4.2.32-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Add Vcs-Svn, Vcs-Browser and Homepage control fields.
 
  -- Andreas Metzler <ametzler@debian.org>  Sun, 27 Jan 2008 13:09:38 +0100
 
