--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-findutils (4.2.32-2) UNRELEASED; urgency=low
+findutils (4.2.33-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream version. (Translation updates and additions only.)
   * Add Vcs-Svn, Vcs-Browser and Homepage control fields.
 
- -- Andreas Metzler <ametzler@debian.org>  Sun, 27 Jan 2008 13:09:38 +0100
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 16 Feb 2008 13:26:48 +0100
 
 findutils (4.2.32-1) unstable; urgency=low
 
