--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.2.33-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 16 Feb 2008 13:41:17 +0100
+
 findutils (4.2.33-1) unstable; urgency=low
 
   * New upstream version. (Translation updates and additions only.)
