--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.0-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 16 Mar 2008 09:40:58 +0100
+
 findutils (4.4.0-1) unstable; urgency=low
 
   * New upstream stable version.
