remove cruft from debian/rules
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@329 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ findutils (4.4.0-3) unstable; urgency=low
   * Clean up debian/rules:
     + Stop setting INSTALL_PROGRAM += -s on DEB_BUILD_OPTIONS=nostrip in
       debian/rules.
+    + Remove old commented commands.
 
  -- Andreas Metzler <ametzler@debian.org>  Sun, 01 Mar 2009 18:27:17 +0100
 
