New changelog stanza.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@332 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.0-4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 01 Mar 2009 19:36:06 +0100
+
 findutils (4.4.0-3) unstable; urgency=low
 
   * Selective pull from Ubuntu:
