New upstream maintance release. + Drop 10_unnecessary_tempfile.dpatch, applied upstream. + Drops duplicate filesystem proc in PRUNEFS. Closes: #518120 Add support for DEB_BUILD_OPTIONS=nocheck.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@333 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-findutils (4.4.0-4) UNRELEASED; urgency=low
+findutils (4.4.1-1) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream maintance release.
+    + Drop 10_unnecessary_tempfile.dpatch, applied upstream.
+    + Drops duplicate filesystem proc in PRUNEFS. Closes: #518120
+  * Add support for DEB_BUILD_OPTIONS=nocheck.
 
- -- Andreas Metzler <ametzler@debian.org>  Sun, 01 Mar 2009 19:36:06 +0100
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 25 Apr 2009 08:24:19 +0200
 
 findutils (4.4.0-3) unstable; urgency=low
 
