new changelog stanza
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@341 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.1-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 25 Apr 2009 10:35:30 +0200
+
 findutils (4.4.1-1) unstable; urgency=low
 
   * New upstream maintenance release.
