--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 findutils (4.4.1-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * debian/locate-cron.daily: Test if called by root. (Thank's, Michael Vogt).
+    Closes: #526939
 
  -- Andreas Metzler <ametzler@debian.org>  Sat, 25 Apr 2009 10:35:30 +0200
 
