--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-findutils (4.4.1-2) UNRELEASED; urgency=low
+findutils (4.4.2-1) unstable; urgency=low
 
-  * NOT RELEASED YET
   * debian/locate-cron.daily: Test if called by root. (Thank's, Michael Vogt).
     Closes: #526939
+  * New upstream version.
+    + find -prune now makes sure it has valid stat() information.
+      Closes: #527584
+    + Drop patches/10_typo_525263.dpatch, included upstream.
 
- -- Andreas Metzler <ametzler@debian.org>  Sat, 25 Apr 2009 10:35:30 +0200
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 06 Jun 2009 16:56:11 +0200
 
 findutils (4.4.1-1) unstable; urgency=low
 
