--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.2-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 06 Jun 2009 17:14:58 +0200
+
 findutils (4.4.2-1) unstable; urgency=low
 
   * debian/locate-cron.daily: Test if called by root. (Thank's, Michael Vogt).
