--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.2-3) unstable; urgency=low
+
+  * Drop all dpatch related stuff.
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 31 Dec 2011 17:19:39 +0100
+
 findutils (4.4.2-2) unstable; urgency=low
 
   * Use dh_installcron to install locate's cron script.
