--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.2-4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Sat, 31 Dec 2011 17:25:37 +0100
+
 findutils (4.4.2-3) unstable; urgency=low
 
   * Drop all dpatch related stuff.
