--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.2-5) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Fri, 06 Jan 2012 10:43:14 +0100
+
 findutils (4.4.2-4) unstable; urgency=low
 
   * Use 3.0 (quilt) format.
