Add build-arch/build-indep targets.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@395 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ findutils (4.4.2-5) unstable; urgency=low
 
   * Fix config.(sub|guess) update, the relevant files are in build-aux/.
     Closes: #689620
+  * Add build-arch/build-indep targets.
 
  -- Andreas Metzler <ametzler@debian.org>  Thu, 04 Oct 2012 19:16:52 +0200
 
