--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+findutils (4.4.2-6) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Andreas Metzler <ametzler@debian.org>  Thu, 04 Oct 2012 19:34:44 +0200
+
 findutils (4.4.2-5) unstable; urgency=low
 
   * Fix config.(sub|guess) update, the relevant files are in build-aux/.
