[21-Fix-time_t-vs-long-int-mismatches.patch] Fix build error on x32 (Thanks, Adam Borowski). Also add bison to build-depends. Closes: #711412
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@413 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ findutils (4.4.2-6) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * [20_texi_ftbfs.diff] Pull some texi fixes from 4.5.x. Closes: #710849
+  * [21-Fix-time_t-vs-long-int-mismatches.patch] Fix build error on x32
+    (Thanks, Adam Borowski). Also add bison to build-depends.
+    Closes: #711412
 
  -- Andreas Metzler <ametzler@debian.org>  Thu, 04 Oct 2012 19:34:44 +0200
 
