Fix building twice in a row by deleting doc/stamp-vti, doc/version.texi, gnulib/lib/getdate.c on clean.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@414 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ findutils (4.4.2-6) UNRELEASED; urgency=low
   * [21-Fix-time_t-vs-long-int-mismatches.patch] Fix build error on x32
     (Thanks, Adam Borowski). Also add bison to build-depends.
     Closes: #711412
+  * Fix building twice in a row by deleting doc/stamp-vti, doc/version.texi,
+    gnulib/lib/getdate.c on clean.
 
  -- Andreas Metzler <ametzler@debian.org>  Thu, 04 Oct 2012 19:34:44 +0200
 
