--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-findutils (4.4.2-6) UNRELEASED; urgency=low
+findutils (4.4.2-6) unstable; urgency=low
 
-  * NOT RELEASED YET
   * [20_texi_ftbfs.diff] Pull some texi fixes from 4.5.x. Closes: #710849
   * [21-Fix-time_t-vs-long-int-mismatches.patch] Fix build error on x32
     (Thanks, Adam Borowski). Also add bison to build-depends.
@@ -8,7 +7,7 @@ findutils (4.4.2-6) UNRELEASED; urgency=low
   * Fix building twice in a row by deleting doc/stamp-vti, doc/version.texi,
     gnulib/lib/getdate.c on clean.
 
- -- Andreas Metzler <ametzler@debian.org>  Thu, 04 Oct 2012 19:34:44 +0200
+ -- Andreas Metzler <ametzler@debian.org>  Sun, 23 Jun 2013 14:18:02 +0200
 
 findutils (4.4.2-5) unstable; urgency=low
 
